# the-gras-style

./: README-frontend.md  README-github.md  README-python.md  README.md  coding_style.md  packages.md
frontend/: (old)README-frontend.md  readme.md
frontend/code-snippets/: materialUI-styling.md  storage-account-workflow.md
frontend/doc/: frontend-git-conventions.md  monorepo-structure-conventions.md  react-project-code-conventions.md  react-project-dependencies.md  react-project-structure.md
templates/: .codecov.yml  README.md  environment.yml  setup.cfg  setup.py
templates/testing-bare/: .travis.yml
templates/testing-docker/: .travis.yml  Dockerfile.environment  Dockerfile.testing
